--- a/src/main/webapp/extras/mymain.css
+++ b/src/main/webapp/extras/mymain.css
@@ -29,19 +29,29 @@ button {
     border: 0;
     padding: 5px;
     color: #FFFFFF;
-    font-size: 12px;
+    font-size: 14px;
     -webkit-transition: all;
     transition: all;
     cursor: pointer;
 }
+
+a.smallbutton {
+     -webkit-appearance: button;
+     -moz-appearance: button;
+     appearance: button;
+
+     text-decoration: none;
+     color: initial;
+ }
 
 .bigform button:hover,.wform button:active,.wform button:focus {
     background: #43A047;
 }
 
 .bigform .smallbutton {
-    padding: 3px;
-    font-size: 10px;
+    display: inline-block;
+    padding: 5px;
+    font-size: 12px;
     background: #60AF50;
 }
 
