--- a/src/main/webapp/extras/green_login.css
+++ b/src/main/webapp/extras/green_login.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
-
 .login-page {
     width: 360px;
     padding: 8% 0 0;
@@ -16,17 +14,6 @@
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-.bigform {
-    position: relative;
-    z-index: 1;
-    background: #FCFCFC;
-    max-width: 900px;
-    margin: 0 auto 100px;
-    padding: 20px;
-    text-align: center;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
 .wform input {
     font-family: "Roboto", sans-serif;
     outline: 0;
@@ -37,18 +24,6 @@
     padding: 15px;
     box-sizing: border-box;
     font-size: 14px;
-}
-button {
-    font-family: "Roboto", sans-serif;
-    outline: 0;
-    background: #4CAF50;
-    border: 0;
-    padding: 5px;
-    color: #FFFFFF;
-    font-size: 12px;
-    -webkit-transition: all;
-    transition: all;
-    cursor: pointer;
 }
 
 .wform button {
@@ -74,6 +49,9 @@ button {
     padding: 3px;
     font-size: 10px;
     background: #60AF50;
+}
+.wform button:active, .wform button:focus {
+    background: #43A047;
 }
 
 .failcause {
@@ -116,14 +94,4 @@ button {
 }
 .container .info span .fa {
     color: #EF3B3A;
-}
-body {
-    background: #76b852; /* fallback for old browsers */
-    background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-    background: -moz-linear-gradient(right, #76b852, #8DC26F);
-    background: -o-linear-gradient(right, #76b852, #8DC26F);
-    background: linear-gradient(to left, #76b852, #8DC26F);
-    font-family: "Roboto", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
 }
