--- a/src/main/webapp/extras/green_main.css
+++ b/src/main/webapp/extras/green_main.css
@@ -22,6 +22,7 @@
     box-sizing: border-box;
     font-size: 12px;
 }
+
 button {
     font-family: "Roboto", sans-serif;
     outline: 0;
@@ -35,24 +36,26 @@ button {
     cursor: pointer;
 }
 
-a.smallbutton {
-     -webkit-appearance: button;
-     -moz-appearance: button;
-     appearance: button;
-
-     text-decoration: none;
-     color: initial;
- }
-
-.bigform button:hover,.wform button:active,.wform button:focus {
-    background: #43A047;
+.warning {
+    color: #FF8000;
 }
 
-.bigform .smallbutton {
+.bigform .smallbutton, a.smallbutton {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    color: #FFFFFF;
+    text-decoration: none;
     display: inline-block;
+    box-sizing: border-box;
     padding: 5px;
     font-size: 12px;
     background: #60AF50;
+}
+
+.bigform button:hover,a.smallbutton:hover {
+    background: #43A047;
 }
 
 body {
