--- a/src/main/webapp/extras/green-main.css
+++ b/src/main/webapp/extras/green-main.css
@@ -30,3 +30,20 @@
     border-style: groove;
     border-width: 2px;
 }
+
+.messagebubble {
+    padding: 3px;
+    border-style: solid;
+    border-width: 1px;
+    margin: 5px;
+    display: none;
+}
+
+.messagein {
+    background: #8DC26F;
+    left:20 px;
+}
+
+.messageout {
+    background: #D3D3D3;
+}
