--- a/src/main/webapp/extras/green-common.css
+++ b/src/main/webapp/extras/green-common.css
@@ -62,8 +62,7 @@ button {
     text-decoration: none;
     display: inline-block;
     box-sizing: border-box;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid;
     padding: 5px;
     font-size: 12px;
     line-height: normal;
