--- a/src/main/webapp/extras/green-main.css
+++ b/src/main/webapp/extras/green-main.css
@@ -2,16 +2,14 @@
 
 #messagebox {
     background: white;
-    border-style: groove;
-    border-width: 2px;
+    border: 2px groove;
     max-height: 500px;
     overflow: auto;
 }
 
 .messagebubble {
     padding: 3px;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid;
     border-radius: 5px;
     margin: 5px;
     display: none;
