--- a/src/main/webapp/extras/green-details.css
+++ b/src/main/webapp/extras/green-details.css
@@ -6,5 +6,10 @@
     border-radius: 5px;
     margin: 5px;
     display: none;
-    background-color: #c4fff3;
+    background-color: #ffffc2;
+}
+
+.edited {
+    font-weight: bold;
+    color: #FF8000;
 }
