--- a/src/main/webapp/extras/green-login.css
+++ b/src/main/webapp/extras/green-login.css
@@ -19,7 +19,7 @@
 .wform input {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: #f2f2f2;
+    background: #F2F2F2;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
