--- a/src/main/webapp/extras/green-common.css
+++ b/src/main/webapp/extras/green-common.css
@@ -32,6 +32,13 @@ label {
     width: 20%;
 }
 
+.databox {
+    background: white;
+    border: 2px groove;
+    max-height: 500px;
+    overflow: auto;
+}
+
 .strikeout {
     text-decoration: line-through;
     color: red;
