--- a/src/main/webapp/extras/green-details.css
+++ b/src/main/webapp/extras/green-details.css
@@ -14,6 +14,10 @@
     color: initial;
 }
 
+.smallbutton.friend:hover {
+    background: #bcdf30;
+}
+
 .colorbox.nonfriend {
     background: #ffffc2;
 }
