--- a/src/main/webapp/extras/green-common.css
+++ b/src/main/webapp/extras/green-common.css
@@ -72,6 +72,7 @@ button {
     box-sizing: border-box;
     border: 1px solid black;
     padding: 5px;
+    margin: 3px;
     font-size: 12px;
     line-height: normal;
 }
