Message delete/wipe authorization

--- a/src/main/webapp/extras/green-common.css
+++ b/src/main/webapp/extras/green-common.css
@@ -106,6 +106,10 @@ button {
     background-color: #175cdf;
 }
 
+.smallbutton[disabled], .smallbutton[disabled]:hover {
+    background-color: #b3b3b3 !important;
+}
+
 button::-moz-focus-inner, input::-moz-focus-inner {
     border: 0;
     padding: 0;
