--- a/src/main/webapp/extras/green-common.css
+++ b/src/main/webapp/extras/green-common.css
@@ -19,7 +19,7 @@
     background-color: #F2F2F2;
     width: 75%;
     border: 0;
-    margin: 0 0 10px;
+    margin: 3px 10px 3px 10px;
     padding: 10px;
     box-sizing: border-box;
     font-size: 12px;
